[gd_scene load_steps=10 format=3 uid="uid://cn0lvuxmmatic"]

[ext_resource type="Script" path="res://scripts/hero_shop.gd" id="1_vlkrh"]
[ext_resource type="Texture2D" uid="uid://b7slkj27w3gti" path="res://assets/heroes/mage_icon.png" id="2_jafmj"]
[ext_resource type="Texture2D" uid="uid://dna2yfkkhmasq" path="res://assets/hero_mages/Game Character Sprites/Character (5)/Attack-1_000.png" id="3_1jana"]
[ext_resource type="Texture2D" uid="uid://gib3mub6nwpq" path="res://assets/hero_mages/Game Character Sprites/Character (6)/Attack-1_000.png" id="3_4b0jn"]
[ext_resource type="Texture2D" uid="uid://72p4057ufhoi" path="res://assets/hero_mages/Game Character Sprites/Character (4)/Attack-1_000.png" id="4_okivm"]
[ext_resource type="Texture2D" uid="uid://bvmbgds5nwbka" path="res://assets/hero_mages/Game Character Sprites/Character (9)/Attack-1_000.png" id="6_3a83p"]
[ext_resource type="Texture2D" uid="uid://baxgby31p7idt" path="res://assets/hero_mages/Game Character Sprites/Character (11)/Attack-1 (1).png" id="6_kcxxf"]
[ext_resource type="Texture2D" uid="uid://bhjd27jvd3kge" path="res://assets/hero_mages/Game Character Sprites/Character (3)/Attack-1_000.png" id="7_sm23f"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h1ppd"]

[node name="HeroShop" type="Control" groups=["ui"]]
layout_mode = 3
anchors_preset = 0
offset_left = 428.0
offset_top = 477.0
offset_right = 1138.0
offset_bottom = 636.0
script = ExtResource("1_vlkrh")

[node name="Panel" type="Panel" parent="." groups=["ui"]]
layout_mode = 0
offset_left = 24.0
offset_top = 2.0
offset_right = 708.0
offset_bottom = 161.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_h1ppd")

[node name="MageButton" type="TextureButton" parent="Panel" groups=["ui"]]
texture_filter = 1
layout_mode = 0
offset_left = 23.0
offset_top = 18.0
offset_right = 119.0
offset_bottom = 135.0
texture_normal = ExtResource("2_jafmj")
ignore_texture_size = true
stretch_mode = 0

[node name="MageButton2" type="TextureButton" parent="Panel" groups=["ui"]]
layout_mode = 0
offset_left = 98.0
offset_top = 24.0
offset_right = 178.0
offset_bottom = 154.0
texture_normal = ExtResource("3_4b0jn")
ignore_texture_size = true
stretch_mode = 0

[node name="MageButton3" type="TextureButton" parent="Panel" groups=["ui"]]
layout_mode = 0
offset_left = 177.0
offset_top = 7.0
offset_right = 267.0
offset_bottom = 149.0
texture_normal = ExtResource("4_okivm")
ignore_texture_size = true
stretch_mode = 0

[node name="MageButton4" type="TextureButton" parent="Panel" groups=["ui"]]
layout_mode = 0
offset_left = 277.0
offset_top = 29.0
offset_right = 351.0
offset_bottom = 148.0
texture_normal = ExtResource("3_1jana")
ignore_texture_size = true
stretch_mode = 0

[node name="MageButton5" type="TextureButton" parent="Panel" groups=["ui"]]
layout_mode = 0
offset_left = 376.0
offset_top = 13.0
offset_right = 455.0
offset_bottom = 149.0
texture_normal = ExtResource("6_3a83p")
ignore_texture_size = true
stretch_mode = 0

[node name="MageButton6" type="TextureButton" parent="Panel" groups=["ui"]]
layout_mode = 0
offset_left = 486.0
offset_top = 25.0
offset_right = 562.0
offset_bottom = 142.0
texture_normal = ExtResource("6_kcxxf")
ignore_texture_size = true
stretch_mode = 0

[node name="MageButton7" type="TextureButton" parent="Panel" groups=["ui"]]
layout_mode = 0
offset_left = 586.0
offset_top = 41.0
offset_right = 659.0
offset_bottom = 135.0
texture_normal = ExtResource("7_sm23f")
ignore_texture_size = true
stretch_mode = 0
